# snake-ai

./: README.md  pyproject.toml  run.py
src/snake_ai/: agent.py  constants.py  game.py  model.py  train.py  trainer.py
