[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-ai"
version = "0.1.0"
description = "Yapay zeka destekli Yılan Oyunu (Snake Game) projesi."
authors = [
    { name = "Alper Karaca" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "torch>=1.10.0",
    "pygame>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/thealper2/snake-ai"
Repository = "https://github.com/thealper2/snake-ai"
Bug Tracker = "https://github.com/thealper2/snake-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"snake_ai" = ["*.csv", "models/*.pth"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["snake_ai"]